# edex-rs

./: Cargo.toml  Dioxus.toml  README.md
assets/css/: fonts.css
assets/misc/: boot_log.txt
src/: main.rs
src/assets/css/: fonts.css
src/components/: boot_screen.rs  clock.rs  hardware_inspector.rs  keyboard.rs  mod.rs  sys_info.rs
src/models/: kb_layout.rs  mod.rs  theme.rs
