[package]
name = "edex-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-hooks = "0.3.1"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
